make file paths relative to volume
